# SMA_T6

./: .gitmodules  CMakeLists.txt  README.md  cppcheck_report.sarif  merge_resolution_process.txt
.devcontainer/: devcontainer.json
.github/workflows/: build.yml  build_static_analysis.yml
include/: DistanceService.hpp  InventoryService.hpp  OrderService.hpp  PrepaymentService.hpp  UserProcessController.hpp  drink.h  inventory.h  inventoryRepository.h  order.h  person.h  prepayCodeRepository.h  prepaymentCode.h
include/application/: InventoryService.hpp
include/domain/: Drink.hpp  Order.hpp  drink.h  inventory.h  message.hpp  order.h  prepaymentCode.h  vendingMachine.h
include/network/: MessageReceiver.hpp  MessageSender.hpp  MessageSerializer.hpp  PaymentCallbackReceiver.hpp  message.hpp
include/persistence/: DrinkRepository.hpp  OrderRepository.hpp  OvmAddressRepository.hpp  inventoryRepository.h  prepayCodeRepository.h
include/presentation/: UserInterface.hpp
include/service/: DistanceService.hpp  ErrorService.hpp  InventoryService.hpp  MessageService.hpp  OrderService.hpp  PrepaymentService.hpp  UserProcessController.hpp
src/: ErrorService.cpp  InventoryService.cpp  OrderService.cpp  PrepaymentService.cpp  UserProcessController.cpp  drink.cpp  invenoryRepository.cpp  main.cpp  order.cpp  person.cpp  prepayCodeRepository.cpp  prepaymentCode.cpp  vendingMachine.cpp
src/application/: DistanceService.cpp  ErrorService.cpp  InventoryService.cpp  PrepaymentService.cpp  UserProcessController.cpp
src/domain/: drink.cpp  inventory.cpp  order.cpp  prepaymentCode.cpp  vendingMachine.cpp
src/include/persistence/: inventoryRepository.h
src/include/service/: InventoryService.hpp
src/network/: MessageReceiver.cpp  MessageSender.cpp  MessageSerializer.cpp  PaymentCallbackReceiver.cpp
src/persistence/: DrinkRepository.cpp  OrderRepository.cpp  OvmAddressRepository.cpp  invenoryRepository.cpp  inventoryRepository.cpp  prepayCodeRepository.cpp
src/presentation/: UserInterface.cpp
src/service/: DistanceService.cpp  ErrorService.cpp  InventoryService.cpp  MessageService.cpp  OrderService.cpp  PrepaymentService.cpp  UserProcessController.cpp
tests/: UC01.cpp  UC02.cpp  UC03.cpp  UC04.cpp  UC05.cpp  UC06.cpp  UC07.cpp  UC08.cpp  UC09.cpp  UC10.cpp  UC11.cpp  UC12.cpp  UC13.cpp  UC14.cpp  UC15.cpp  UC16.cpp  UC17.cpp  inventoryRepository_test.cpp  inventory_test.cpp  order_test.cpp  prepaymentCodeRepository_test.cpp  prepaymentCode_test.cpp  test_bootstrap.cpp  test_network.cpp  test_person.cpp
tests/network/: msg_sender_test_1.cpp  msg_sender_test_2.cpp  msg_service_test_1.cpp  msg_service_test_2.cpp  msg_service_test_3.cpp  msg_service_test_4.cpp  msg_service_test_5.cpp  test_MessageReceiver_subscribe.cpp  test_MessageSender_basicSend.cpp  test_MessageService_broadcast.cpp  test_message_service_broadcast_stock.cpp
